_archive/parseable/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parseable
  namespace: monitoring
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:poll
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: mdi-poll
    gethomepage.dev/name: parseable
    gethomepage.dev/widget.url: https://parseable.${SECRET_DOMAIN}
    gethomepage.dev/siteMonitor: https://parseable.${SECRET_DOMAIN}
spec:
  ingressClassName: internal
  rules:
    - host: "parseable.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parseable
                port:
                  number: 80
  tls:
    - hosts:
        - "parseable.${SECRET_DOMAIN}"
